# investor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  gsd-all.sh  pyproject.toml  superpower.sh
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.playwright-cli/: page-2026-04-02T22-37-25-044Z.yml  page-2026-04-02T22-37-36-387Z.yml  page-2026-04-02T22-38-33-025Z.yml  page-2026-04-02T22-38-49-107Z.yml  page-2026-04-02T22-39-24-368Z.yml  page-2026-04-02T22-48-04-173Z.yml  page-2026-04-02T22-48-28-542Z.yml  page-2026-04-02T22-49-19-389Z.yml  page-2026-04-02T22-49-39-229Z.yml  page-2026-04-02T22-49-55-767Z.yml  page-2026-04-02T22-50-03-870Z.yml  page-2026-04-02T22-50-13-906Z.yml  page-2026-04-02T22-51-47-160Z.yml
app/: __init__.py  config.py  main.py  runtime.py
app/agents/: __init__.py  quiver_loop.py  research.py
app/api/: routes.py
app/db/: models.py  session.py
app/evals/: __init__.py  cases.py  runner.py  scoring.py  types.py
app/graph/: nodes.py  runtime.py  state.py  workflow.py
app/ops/: dry_run.py  live_proof.py  readiness.py
app/repositories/: __init__.py  broker_artifacts.py  operation_events.py  (+2 more)
scripts/: cron-install.sh  cron-remove.sh  cron-status.sh  cron-trigger.sh
tests/: conftest.py  gsd_all_smoke_test.sh  superpower_smoke_test.sh  test_gsd_all.py
(+246 files in other folders)
