[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investor"
version = "0.1.0"
description = "Local-first investing workflow service"
requires-python = ">=3.12"
dependencies = [
  "alembic",
  "fastapi",
  "httpx",
  "itsdangerous",
  "Jinja2==3.1.6",
  "psycopg[binary]",
  "uvicorn",
  "pydantic-settings",
  "sqlalchemy",
]

[tool.setuptools]
packages = ["app"]
